--- a/form_3.html
+++ b/form_3.html
@@ -26,10 +26,10 @@
         <h6>速配进行中～～ 1%</h6>
     </div>
 
-    <h3>我的个性标签 <span class="badge badge-secondary">Σ(￣。￣ﾉ)ﾉ</span></h3>
+    <h3>我希望另一半... <span class="badge badge-secondary">( ´▽` )ﾉ</span></h3>
     <div class="container">
         <form role="form">
-            <label>我是一个...</label>
+            <label>TA是一个...</label>
             <div class="row">
                 <div class="col-sm">
                     <div class="radio">
@@ -51,7 +51,7 @@
 
             <hr>
 
-            <label>我是一个...的人</label>
+            <label>TA是一个...的人</label>
             <div class="row">
                 <div class="col-sm">
                     <div class="radio">
@@ -73,7 +73,7 @@
 
             <hr>
 
-            <label>我是一个...的人</label>
+            <label>TA是一个...的人</label>
             <div class="row">
                 <div class="col-sm">
                     <div class="radio">
@@ -95,7 +95,7 @@
 
             <hr>
 
-            <label>我是一个...的人</label>
+            <label>TA是一个...的人</label>
             <div class="row">
                 <div class="col-sm">
                     <div class="radio">
@@ -117,7 +117,7 @@
 
             <hr>
 
-            <label>我是一个...的人</label>
+            <label>TA是一个...的人</label>
             <div class="row">
                 <div class="col-sm">
                     <div class="radio">
@@ -139,7 +139,7 @@
 
             <hr>
 
-            <label>我是一个...的人</label>
+            <label>TA是一个...的人</label>
             <div class="row">
                 <div class="col-sm">
                     <div class="radio">
@@ -161,7 +161,7 @@
 
             <hr>
 
-            <label>我是一个...的人</label>
+            <label>TA是一个...的人</label>
             <div class="row">
                 <div class="col-sm">
                     <div class="radio">
@@ -183,7 +183,7 @@
 
             <hr>
 
-            <label>我是一个...的人</label>
+            <label>TA是一个...的人</label>
             <div class="row">
                 <div class="col-sm">
                     <div class="radio">
@@ -205,7 +205,7 @@
 
             <hr>
 
-            <label>我是一个...的人</label>
+            <label>TA是一个...的人</label>
             <div class="row">
                 <div class="col-sm">
                     <div class="radio">
