Form almost complete. TODO: js animation. Input check.

--- a/form_4.html
+++ b/form_4.html
@@ -177,6 +177,8 @@
     <footer class="footer">
         <p>&copy; ACE婚介所 2018 <a href="https://github.com/Louis-He">@叮咚的雨</a> <br>提交的数据将不会被公布</p>
     </footer>
+    <script src="static/js/jquery-3.3.1.js"></script>
+
 </div>
 </body>
 </html>
